--- a/HuaxiApp2/package.json
+++ b/HuaxiApp2/package.json
@@ -6,11 +6,15 @@
     "start": "node node_modules/react-native/local-cli/cli.js start"
   },
   "dependencies": {
+    "material-design-icons": "^3.0.1",
     "react": "15.3.2",
     "react-addons-shallow-compare": "^15.3.2",
     "react-native": "^0.34.1",
+    "react-native-elements": "^0.6.2",
     "react-native-gifted-listview": "0.0.15",
     "react-native-navbar": "^1.5.4",
+    "react-native-refreshable-listview": "^2.0.0-beta4",
+    "react-native-scrollable-tab-view": "^0.6.0",
     "react-native-tab-view": "0.0.31",
     "react-native-vector-icons": "^2.1.0",
     "whatwg-fetch": "^1.0.0"
